# any-player-sync-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: app-integration.md
src/: app.rs  config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  shutdown.rs  state.rs  ws.rs
static/admin/: index.html  login.html
